# superparams

./: .gitignore  LICENSE  README.md  grid_search.py  hello.py  pyproject.toml  readme.md  todo.md
src/superparams/: __init__.py  experiment.py  shared.py
src/tests/: test.ipynb
tests/: test_basic.py  test_cli.py  test_outputs.py
tests/assets/: sibling_lib.py
tests/assets/experiments/: debug.py  dummy.py
tests/assets/experiments/progress/debug/Debug/: 20241205-001038.parquet  20241205-001038.progress
tests/assets/experiments/subdir/: sub_dummy.py
tests/assets/subdir/: subdir_lib.py
