[project]
name = "superparams"
version = "0.0.2"

authors = [
    { name="Aral", email="me@aral.cc" }
]

description = "Programmatic space search with a focus on flexibility"
readme = "readme.md"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = []

[project.urls]
Homepage = "https://github.com/Ar4l/superparams"
Issues = "https://github.com/Ar4l/superparams/issues"

[project.scripts]
experiment = "superparams:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

